Removed footer; Added Diamonte image

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/landing_page_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/landing_page_clix.html
@@ -21,10 +21,8 @@
                 <div class="small-6 medium-6 columns clix_brief panel-mod" data-equalizer-watch>
                   <img src="/static/ndf/css/themes/clix/CLIx_white-01.svg" style='width:300px;margin: 40px 0px;' title="Invitation to clix."/>
                    <p class='white-text'>
-                        Invitation to CLIx will help you learn to do many things with a computer. Express your ideas through activities, engage with your classmate and learn together and share your knowledge.
-                        <br/>
-                        Clix is an initiative to promote digital learning; with the exposure of interactives and hands on activities on electronic machine.
-                   
+                        
+                    <img src="/static/ndf/images/Diamonte-transparent.png">
                     </p>
                 </div>
                 <div class="small-5 columns">
@@ -96,7 +94,7 @@
     </div>
       
   </div>
-  {% include "ndf/footer_clix.html" %}
+  
 
 
 
