updated colors list in buddy.html

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/buddy.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/buddy.html
@@ -209,8 +209,8 @@
                   code: '#158aff'
                 },{
                   id: 8,
-                  color: 'cyan',
-                  code: '#00c8ee'
+                  color: 'indigo',
+                  code: '#4b0082'
                 },{
                   id: 9,
                   color: 'violet',
@@ -219,6 +219,22 @@
                   id: 10,
                   color: 'green',
                   code: '#7fcc2c'
+                },{
+                  id: 11,
+                  color: 'green',
+                  code: '#7fcc2c'
+                },{
+                  id: 12,
+                  color: 'gray',
+                  code: '#808080'
+                },{
+                  id: 13,
+                  color: 'khaki',
+                  code: '#F0E68C'
+                },{
+                  id: 14,
+                  color: 'maroon',
+                  code: '#800000'
             }];
 
             var animalList = [
