--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -5027,4 +5027,10 @@ ul.nav_menu_1 {
                 border: 1px solid #c1b4b5;
                 background-color: #4b4852;
 
-            }
+    }
+
+
+.img-style-land{
+        margin-top: 28px;
+    margin-left: -56px;
+}
