--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/landing_page_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/landing_page_clix.html
@@ -19,10 +19,10 @@
         <div class="small-12 columns ">
             <div class="row" data-equalizer>
                 <div class="small-6 medium-6 columns clix_brief panel-mod" data-equalizer-watch>
-                  <img src="/static/ndf/css/themes/clix/CLIx_white-01.svg" style='width:300px;margin: 40px 0px;' title="Invitation to clix."/>
+                  <img src="/static/ndf/images/Clix_logo.png" style='width:300px;margin: 40px 0px;' title="Invitation to clix."/>
                    <p class='white-text'>
                         
-                    <img src="/static/ndf/images/Diamonte-transparent.png">
+                    <img class="img-style-land" src="/static/ndf/images/Diamonte_normalText_32.png">
                     </p>
                 </div>
                 <div class="small-5 columns">
