--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gin-line-texteditor.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gin-line-texteditor.html
@@ -159,8 +159,7 @@
   {% endif %}
 
   var user_access = "{{ user_access }}"; // "allow" or "disallow"
-  {% edit_policy groupid node request.user as status %}
-  var edit_policy = "{{ status }}"; // "allow" or "disallow"
+  var edit_policy = "allow"; // "allow" or "disallow"
   var is_user_authenticated = {{ request.user.is_authenticated|lower }};
 
   function createDiscussion()
