Added active class to Buddy, Misc Css for logged in user on header

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -679,6 +679,7 @@ h5{
                                 border-bottom: 0px;
                                 border-left: 3px solid $secondary-orange;
 
+
                             }
                         }
                     }
@@ -4632,7 +4633,10 @@ ul.nav_menu_1 {
 }
 
 .buddy_margin{
-    margin-right: 70px;
+    margin-right: 80px;
+    color:white;
+    font-family:OpenSans-Regular;
+    margin-top:6px;
 
 }
 
