tooltip for add buddy

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/buddy.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/buddy.html
@@ -6,7 +6,7 @@
   <!-- RHS Buddy Panel -->
   <div class="buddy_panel" id="sample_buddy_panel">
         <div class="add_buddy_icon">
-            <a href="#" data-reveal-id="add_buddy_modal">
+            <a href="#" data-reveal-id="add_buddy_modal" title="Add Buddy">
 
               <!-- Add-Buddy-Button -->
               <svg viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
