hiding assessments if announced unit

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
@@ -59,6 +59,7 @@
     </div>
 </div>
 <div class="row">
+    {% if  "announced_unit" not in group_member_of %}
     <div class="columns small-12 medium-6">
       <div class="course-quiz-perf course-section">
         <span class="course-section-heading">Assessment Performance</span>
@@ -87,6 +88,7 @@
         </div>
       </div>
     </div>
+    {% endif %}
     <div class="columns small-12 medium-6">
       <div class="course-interactions course-section">
         <span class="course-section-heading">Interactions</span>
