updated sync_existing for assessments update

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
@@ -125,9 +125,13 @@
       </div>
 </div>             
 
+{% endblock %}
+
+{% block head %}
+{{block.super}} 
 <script type="text/javascript">
   // start of document.ready()
-  $(document).ready(function() {
+  $(document).ready(function(event) {
     var iframes = document.getElementsByTagName('iframe');
     var key = 'assessment.Bank';
 
@@ -143,7 +147,6 @@
             if (source_attr.indexOf("://") > -1) {
                 src_split = source_attr.split('/');
                 if (src_split.indexOf(oac_url) > -1 ){
-
                   new_url = domain_prefix + '//'+ window.location.host
                 }
                 else{
@@ -222,4 +225,5 @@
           
       });
 </script>
+
 {% endblock %}
