--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
@@ -17,7 +17,12 @@
     Your analytics is loading. Please wait.
 </div>
 <div class="row">
-  <h3>Analytics of user '{{username}}'</h3>
+  <div class="small-6 columns">
+    <h3>Analytics of user <i>'{{username}}'</i></h3>
+  </div>
+  <div class="small-6 columns">
+    <h3 class="course-metric-count users_points">Total points gained:  {{users_points}}</h3>
+  </div>
 </div>
 <div class="course-overview-container">
 
@@ -49,8 +54,6 @@
 
 
     <div class="columns small-12 medium-6 points-data">
-      <h5>Total points gained</h5>
-      <span class="course-metric-count users_points">{{users_points}}</span>
 
       <div class="course-points-breakup">
 
@@ -61,30 +64,33 @@
 <div class="row">
     <div class="columns small-12 medium-6">
       <div class="course-quiz-perf course-section">
-        <span class="course-section-heading">Assessment Performance</span>
+        <span class="course-section-heading">Assessment Performance  <small><u><a class="fetch-assessment-analytics" data-user-id={{user_id}}>Update</a></u></small></span>
         <span class="course-section-icon">
           <i class="fa fa-question-circle"></i>
         </span>
-        <div class="row">
-          <div class="columns small-12 medium-6">
-            <span class="course-metric-heading">Questions Attempted</span>
-            <span class="course-metric-count attempted_quizitems">{{attempted_quizitems}}</span>
-          </div>
-          <div class="columns small-12 medium-6">
-            <span class="course-metric-heading">Total Questions</span>
-            <span class="course-metric-count total_quizitems">{{total_quizitems}}</span>
-          </div>
-        </div>
         <div class="row">
           <div class="columns small-12 medium-6">
             <span class="course-metric-heading">Correct Answers</span>
             <span class="course-metric-count correct-count correct_attempted_quizitems">{{correct_attempted_quizitems}}</span>
           </div>
           <div class="columns small-12 medium-6">
+            <span class="course-metric-heading">Total Questions</span>
+            <span class="course-metric-count total_quizitems">{{total_quizitems}}</span>
+          </div>
+        </div>
+        {% if "announced_unit" not in group_obj.member_of_names_list %}
+        <div class="row">
+          <div class="columns small-12 medium-6">
+            <span class="course-metric-heading">Questions Attempted</span>
+            <span class="course-metric-count attempted_quizitems">{{attempted_quizitems}}</span>
+          </div>
+
+          <div class="columns small-12 medium-6">
             <span class="course-metric-heading">Incorrect answers</span>
             <span class="course-metric-count incorrect-count incorrect_attempted_quizitems">{{incorrect_attempted_quizitems}}</span>
           </div>
         </div>
+        {% endif %}
       </div>
     </div>
     <div class="columns small-12 medium-6">
@@ -240,8 +246,8 @@
 
 
 <script type="text/javascript">
-      // pi chart for score points
-      function generateGraph(data){
+    // pi chart for score points
+    function generateGraph(data){
         var dataSet = []
           $.each(data,function(i,v){
             dataSet.push({'legendLabel':i,'magnitude':v})
@@ -343,14 +349,39 @@
         Math.degrees = function(radians) {
           return radians * 180 / Math.PI;
         };
-      }
+    }
 
     $(document).ready(function() {
       var points_dict = {{users_points_breakup|safe}}
-      if (points_dict.hasOwnProperty('Total')){
-        delete points_dict['Total']
-      }
-      generateGraph(points_dict)
+        if({{users_points}} >  0){
+          if (points_dict.hasOwnProperty('Total')){
+            delete points_dict['Total']
+          }
+          generateGraph(points_dict)
+        }
+        else{
+          $(".course-points-breakup").html("<i>No points to show Pie Chart</i>")
+        }
+      })
+
+    $(document).on('click', '.fetch-assessment-analytics', function(){
+      user_id = $(this).attr('data-user-id')
+      $.ajax({
+
+        url: "{% url 'load_assessment_analytics' group_obj.pk %}",
+
+        type: "GET",
+        data:{
+          domain: window.location.hostname,
+          user_id: user_id
+        },
+        dataType: "json",
+
+        success: function(data){
+          $(".correct_attempted_quizitems").html(data['correct_attempted_quizitems'])
+        },
+      });//end of ajax
+
     })
 
 </script>
