--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
@@ -2,7 +2,7 @@
 {% load ndf_tags %}
 {% check_is_gstaff group_id request.user as is_gstaff %}
 {% get_download_filename node as download_filename %}
-
+{% get_group_object groupid as group_object %}
 <div class="row">
   <div class="medium 12 columns">
 	    <div class="left small-12 medium-6 columns">
@@ -10,8 +10,9 @@
                   	                    
 	                    <!--<input type="text" placeholder="" name="resource_name" />-->
 	                </label>
-                  <label>Created By: <b> {{ node.user_details_dict.contributors|join:', ' }} </b>
-                                        
+                  {% if 'base_unit' in group_object.member_of_names_lists %}
+                    <label>Created By: <b> {{ node.user_details_dict.contributors|join:', ' }} </b>
+                  {% endif %}                    
                       <!--<input type="text" placeholder="" name="resource_name" />-->
                   </label>
 
