close button added on user analytics reveal

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
@@ -18,6 +18,7 @@
 </div>
 <div class="row">
   <h3>Analytics of user '{{username}}'</h3>
+  <a class="close-reveal-modal" aria-label="Close">&#215;</a>
 </div>
 <div class="course-overview-container">
 
