Misc UI changes of Enroll button and post button

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/in-line-texteditor.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/in-line-texteditor.html
@@ -187,7 +187,7 @@
                             p.after('<div class="ckeditor-content-comment"><div class="ckeditor-reply-area"></div> <div class="post-btn-div" style="float: right; margin-right: 67px;">');
                                   // '<img width="'+  width + '"src=' + completeURL +  '>' + '</img>'
                                   $('.ckeditor-reply-area').html(data);
-                                  $('.post-btn-div').html('<input type="button" value="Post"  class="explore-button reply-button" onclick="addReply(this)" style="width:34% ">');
+                                  $('.post-btn-div').html('<input type="button" value="Post"  class="explore-button reply-button " onclick="addReply(this)" style="width:34%;">');
 
                             setCurrNodeEdit(1);
 
@@ -250,7 +250,7 @@
                                   // '<img width="'+  width + '"src=' + completeURL +  '>' + '</img>'
                                   $('.ckeditor-reply-area').html(data);
 
-                                  $('.post-btn-div').html('<input data-id=""  type="button" value="Post"  class="button right small explore-button reply-button" onclick="addReply(parent_obj)">');
+                                  $('.post-btn-div').html('<input data-id=""  type="button" value="Post"  class=" explore-button reply-button post-btn" onclick="addReply(parent_obj)">');
 
                                   setCurrNodeEdit(1);
 
