--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -2976,6 +2976,17 @@ ul.jqtree-tree .jqtree-toggler {
             display: inline-block;
             vertical-align: top;
         }
+        .post-btn{
+            background-color: white;
+            width: 77px;
+            margin-left: 17px;
+            &:hover{
+                color: #FFC151;
+                background-color: rgba(206, 120, 105, 0.25);
+            }
+
+
+        }
     }
 
     .disc-replies {
@@ -4338,9 +4349,14 @@ $module-card-lines-to-show: 3;
                 transition: border-radius .2s;
                 text-shadow: 3px 2px #164a7b;
             }
+
+            .right-margin{
+                    margin-right: 56px;
+            }
+
             .enroll-unit{
                     margin-top: 100px;
-                    margin-right: -45px;
+                    //margin-right: -45px;
                     padding: 1px 5px 1px 5px;
                     text-transform: none;
                     text-align: center;
@@ -4350,7 +4366,7 @@ $module-card-lines-to-show: 3;
                     box-shadow: 0.6px 0.9px #164a7b;
                     text-shadow: 1px 1px #164a7b;
                     opacity: 1;
-                    margin-right: 6px;
+                    margin-right: 56px;
                     border-radius: 4px;
                    // border: 1px solid #c1b4b5;
                    // background-color: #4b4852;
@@ -4367,7 +4383,10 @@ $module-card-lines-to-show: 3;
                 cursor:pointer;
                 color:#ffc14e;
                 }
+                
             }
+
+
 
             .enroll_unit{
                     margin-top: 100px;
@@ -4639,6 +4658,8 @@ ul.nav_menu_1 {
     margin-top:6px;
 
 }
+
+
 
 .lms_explore_head{
     width: 100%;
