--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/translation_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/translation_list.html
@@ -4,7 +4,7 @@
 
 {% block body_content %}
 <div class="row group_content">
-    <div class="small-12 columns group_sections_content">
+    <div class="small-12 columns group_sections_content top-margin-translation">
 
         <h2> {{node.name}} </h2>
 
