--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -13,7 +13,7 @@
             <div class="course_tree">
                 <dl class="accordion course-lessons" data-accordion role="tablist">
                 </dl>
-                <a class="button-hollow-grey add-lesson" data-reveal-id="add-lesson-reveal">Add Lesson</a>
+                <a class="button-hollow-grey add-lesson add-lesson-top-margin" data-reveal-id="add-lesson-reveal">Add Lesson</a>
             </div>
             <!-- END of LEFT PANEL -->
 
@@ -21,7 +21,7 @@
             <div class="course-editor-section hide">
                 <div class="activity-editor hide">
                     <!-- Right panel Header -->
-                    <div class="actvity-editor-header editor-header" id="actvity-editor-headerid">
+                    <div class="actvity-editor-header editor-header activity-editor-header-top" id="actvity-editor-headerid">
                         <div class="left header-left activity-name-label row">
                             <span class="activity-name"><!-- Activity Name --></span>
                         </div>
@@ -30,7 +30,7 @@
                         <a  class="view-admin-page right orange-button-template" data-current-activity-id="" > View Teacher's page</a>
                         <a  class="view-help-page right orange-button-template" data-current-activity-id="" > View Help page</a>
                         {% endcomment %}
-                        <a style="margin-top:10px!important" class="save_edit_activity right orange-button-template" data-current-activity-id="" > Edit </a>
+                        <a style="margin-top:10px!important; margin-right:27px;" class="save_edit_activity right orange-button-template" data-current-activity-id="" > Edit </a>
                     </div>   
                      <!-- commenting following as activities now will be created/edited
                         from activity area -->
@@ -290,7 +290,7 @@ This will not be used because now only existing activities will be added.
 <div id="add-lesson-reveal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
     <h3>Lesson Name</h3>
     <input type="text" id="lesson-name">
-    <select class="lesson-lang" name="lan" id="lesson_lang" >
+    <select class="lesson-lang" name="lan" id="lesson_lang" style="height:43px;">
                             {% get_language_info_list for LANGUAGES as languages %}
                             
                             {% for language in languages %}
@@ -304,7 +304,7 @@ This will not be used because now only existing activities will be added.
                                 {% endif %}
                             {% endfor %}
                           </select><br/>
-    <button type="button" class="button-hollow-grey save-lesson" data-node-id=""> Save Lesson </button>
+    <button type="button" class="button-hollow-grey save-lesson add-lesson-top-margin" data-node-id=""> Save Lesson </button>
     <a class="close-reveal-modal" aria-label="Close">&#215;</a>
 </div>
 <!-- END of overlay/reveal to add lesson -->
