--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/in-line-texteditor.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/in-line-texteditor.html
@@ -75,7 +75,8 @@
           <div clas="discussion-title row " >
              <div class="discussion-title-username">
               <a  href="{% url 'dashboard' each_reply.userid %}" style="color:#ADABAB !important" title=" {{ each_reply.username }}">
-                {{ each_reply.username }} 
+                {# {{ each_reply.username }} #}
+                {{ each_reply.contributors|join:', ' }} 
               </a>
                 <small style="float:right;color:#999999">{{ each_reply.last_update }}</small>
             </div>
