--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -924,14 +924,17 @@ ul.horizontal_tabs_gstudio {
     }
     .group_sections {
         text-align: center;
-        border-bottom: 19px solid rgba(255,255,255,255);
+        border-bottom: 2px solid rgba(255,255,255,255);
         background: #eefaff;
     }
     .group_sections_content {
         // min-height: 400px;
         background-color: #fff;
         margin-bottom: 100px;
-        margin-top:-18px;
+        margin-top:-1px;
+    }
+    .top-bar-secondions_content{
+    	background-color:#fff;
     }
 
     .course_actions>span{
@@ -3257,7 +3260,7 @@ $activity-border-color: #e0e0e0;
 $activity-header-height: 45px;
 $activity-header-icon-block-width: 70px;
 body {
-    background-color: #fff;
+    background-color: rgba(0, 0, 0, 0.04);
 }
 
 /*
@@ -4508,6 +4511,7 @@ ul.nav_menu_1 {
     background: #fff;
     margin: 20px auto;
     padding: 20px 0px;
+    margin-top: 0px;
 
     ul.jqtree-tree {
         .course-tree-node {
@@ -5075,4 +5079,7 @@ ul.nav_menu_1 {
 }
 .add-lesson-top-margin{
     margin-top:5px;
+}
+.translation-detail-top-margin{
+	margin-top: 0px;
 }
