--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -924,7 +924,7 @@ ul.horizontal_tabs_gstudio {
     }
     .group_sections {
         text-align: center;
-        border-bottom: 2px solid rgba(255,255,255,255);
+        border-bottom: 2px solid #f5f5f5;
         background: #eefaff;
     }
     .group_sections_content {
