--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_page_create_edit.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_page_create_edit.html
@@ -5,9 +5,10 @@
             <div>
                 <div class="small-12 columns">
                     <!-- <div class="small-4 columns name-div"> -->
+                    <label style="margin-left:5px">Unique Name:</label>
                         <input type="text" class="node_name" name="name" placeholder="Enter name of Page" value="{{activity_node.name}}" style="border-radius: 5px; margin-top: 11px;">
                         <label class="node_name_empty hide" style="color:red">Please enter Name</label>
-
+                        <label style="margin-left:5px" >Display Name:</label>
                         <input type="text" class="node_altname" name="alt_name" placeholder="Enter display name of Page"  value="{{activity_node.altnames}}" style="border-radius: 5px; margin-top: 11px;">
                         <label class="node_altname_empty hide" style="color:red">Please enter display Name</label>
                     <!-- </div> -->
