new buddy rendering issue resolved

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/buddy.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/buddy.html
@@ -932,7 +932,7 @@
                 
                 {
                   id: 64,
-                  name: 'Apple',
+                  name: 'apple',
                   svg: `<svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" version="1.1">
                       <g transform="translate(-721.42857,-650.93361)">
                         <path
@@ -944,7 +944,7 @@
                 },
                 {
                   id: 65,
-                  name: 'Banana',
+                  name: 'banana',
                   svg: `<svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" version="1.1">
                       <g transform="translate(-721.42857,-650.93361)">
                         <path
@@ -956,7 +956,7 @@
                 },
                 {
                   id: 66,
-                  name: 'Garpes',
+                  name: 'garpes',
                   svg: `<svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" version="1.1">
                       <g transform="translate(-721.42857,-650.93361)">
                         <path
@@ -968,7 +968,7 @@
                 },
                 {
                   id: 67,
-                  name: 'Pineapple',
+                  name: 'pineapple',
                   svg: `<svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" version="1.1">
                       <g transform="translate(-721.42857,-650.93361)">
                         <path
@@ -981,7 +981,7 @@
                 
                 {
                   id: 69,
-                  name: 'Hibiscus',
+                  name: 'hibiscus',
                   svg: `<svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" version="1.1">
                       <g transform="translate(-721.42857,-650.93361)">
                         <path
@@ -993,7 +993,7 @@
                 },
                 {
                   id: 70,
-                  name: 'Lotus',
+                  name: 'lotus',
                   svg: `<svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" version="1.1">
                       <g transform="translate(-721.42857,-650.93361)">
                         <path
@@ -1005,7 +1005,7 @@
                 },
                 {
                   id: 71,
-                  name: 'Rose',
+                  name: 'rose',
                   svg: `<svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" version="1.1">
                       <g transform="translate(-721.42857,-650.93361)">
                         <path
@@ -1017,7 +1017,7 @@
                 },
                 {
                   id: 72,
-                  name: 'Sunflower',
+                  name: 'sunflower',
                   svg: `<svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" version="1.1">
                       <g transform="translate(-721.42857,-650.93361)">
                         <path
@@ -1029,7 +1029,7 @@
                 },
                 {
                   id: 68,
-                  name: 'Strawberry',
+                  name: 'strawberry',
                   svg: `<svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" version="1.1">
                       <g transform="translate(-721.42857,-650.93361)">
                         <path
@@ -1041,7 +1041,7 @@
                 },
                 {
                   id: 63,
-                  name: 'Grasshopper',
+                  name: 'grasshopper',
                   svg: `<svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" version="1.1">
                       <g transform="translate(-721.42857,-650.93361)">
                         <path
