--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
@@ -126,6 +126,34 @@
 </div>             
 
 <script type="text/javascript">
+
+   function onMessage(message) {
+    // Inconveniently, we don't seem to be able to locate the
+    // assessment-player's iframe inside the content's iframe.  Conventiently,
+    // the assessment-player sends a message up to us to indicate its available
+    // locales.  Although we ignore the available locales, we use that message's
+    // source to target a message back down to the assessment-player.
+    var data = message.data;
+    if(typeof(message.data) == "string"){
+      data = JSON.parse(message.data);
+    }
+    const type = data.open_assessments_msg;
+
+    switch(type) {
+      case "open_assessments_available_locales":
+        message.source.postMessage({
+          open_assessments_msg: "open_assessments_set_locale",
+          locale: '{{LANGUAGE_CODE}}'
+        }, "*");
+        break;
+    }
+  }
+
+  function componentDidMount() {
+    window.addEventListener("message", (e) => this.onMessage(e), false);
+  }
+  componentDidMount()
+
   // start of document.ready()
   $(document).ready(function() {
     var iframes = document.getElementsByTagName('iframe');
@@ -168,6 +196,7 @@
        }
     }
   })
+
   $(".admin-page").click(function(event){
       $.ajax({
               type: "POST",
