General toolbar added in translation's form ckeditor

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/translate_form.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/translate_form.html
@@ -8,6 +8,6 @@
 
 
 {% block body_content %}
-    {% include 'ndf/widget_node_form.html' %}
+    {% include 'ndf/widget_node_form.html' with editor_type="GeneralToolbar" %}
 {% endblock %}
 
