section subsection test node changed

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/section_subsection.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/section_subsection.html
@@ -358,7 +358,7 @@ This will not be used because now only existing activities will be added.
                 {{/each}}
                 <li>
                     <div class="custom_dropdown">
-                        <a data-reveal-id="select-activity-page" class="add_existing_activity"><u>Add {{sub_section_name}}</u></a>
+                        <a data-reveal-id="select-activity-page" class="add_existing_activity"><u>Add {{sub_section_name}}Activity</u></a>
                         <!--
                         <a class="button-hollow-grey add_activity">Add Activity</a>
                          <ul class="dropdown_content left_align" >
