--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/test_template.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/test_template.html
@@ -3,5 +3,5 @@
 {% load ndf_tags %}
 {% block body_content %}
 {% get_node_hierarchy node as node_hierarchy %}
-{% include "ndf/section_subsection.html" with unit_structure=node_hierarchy unit_obj=node group_id=node.pk section_name="help" sub_section_name="Topics"  %}
+{% include "ndf/section_subsection.html" with unit_structure=node_hierarchy unit_obj=node group_id=node.pk section_name="Topic" sub_section_name="Activity"  %}
 {% endblock body_content %}
