--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
@@ -38,14 +38,14 @@
               </span>
               <ul id="course-settings-drop" class="f-dropdown" data-dropdown-content aria-hidden="true" tabindex="-1">
               <li>
-                  <a href="{% url 'unit_edit' groupid group_object.pk %}" class="fi-pencil"> Edit</a>
+                  <a href="{% url 'unit_edit' groupid group_object.pk %}" class="fi-pencil"> {% trans "Edit" %}</a>
               </li>
               <li>
                     <a class="fi-photo" style="position: relative;top: -3px;left: 2px;" data-reveal-id="group_banner_prof_pic_prop">
-                    Change image</a>
+                    {% trans "Change image" %}</a>
               </li>
               <li>
-                  <a data-reveal-id="manage_users_modal" href="{% url 'manage_users' group_id %}"  class="fi-torsos"> Manage Users</a>
+                  <a data-reveal-id="manage_users_modal" href="{% url 'manage_users' group_id %}"  class="fi-torsos"> {% trans "Manage Users" %}</a>
                   <div id="manage_users_modal" class="reveal-modal large" data-reveal style="position:absolute;">
                       <div id="group_drawer">
                       {% include "ndf/widget_user_search.html" with subscription_status=True %}
@@ -55,7 +55,7 @@
               </li>
               
               <li>
-                  <a href="{% url 'create_event_group' group_id 'CourseEventGroup' %}" class="fi-volume"> Announce</a>
+                  <a href="{% url 'create_event_group' group_id 'CourseEventGroup' %}" class="fi-volume"> {% trans "Announce" %}</a>
               </li>
 
               {% get_lessons group_object as lessons_list %}
@@ -69,7 +69,7 @@
               </li>
 
 
-              <li> <a data-reveal-id="delete-unit"><i class="fa fa-trash"></i> Delete</a> </li>
+              <li> <a data-reveal-id="delete-unit"><i class="fa fa-trash"></i> {% trans "Delete" %}</a> </li>
 
               </ul>
           </div>
@@ -82,11 +82,11 @@
                   {% include 'ndf/widget_enroll.html' %}
 
                 {% else %}
-                  <a disabled="disabled" class="enroll_unit"> ENROLLED</a>
+                  <a disabled="disabled" class="enroll_unit">{% trans "ENROLLED" %} </a>
                 {% endif %}
 
             {% else %}
-                <a href="{% url 'auth_login' %}" title="Please login to Enroll" class="enroll_unit">ENROLL</a>
+                <a href="{% url 'auth_login' %}" title="Please login to Enroll" class="enroll_unit">{% trans "ENROLL" %}</a>
             {% endif %}
          </div>
        </div>
@@ -97,16 +97,17 @@
  
   <ul class="nav_menu_1">
     <li>
-      <a href="{% url 'course_about' group_id %}" {% if title == 'about' %}class="selected"{% endif %}>Overview</a> 
+      <a href="{% url 'course_about' group_id %}" {% if title == 'about' %}class="selected"{% endif %}>
+      {% trans "Overview" %}</a> 
     </li>
     <li>
-      <a href="{% url 'course_content' group_id %}" {% if title == 'course content' %}class="selected"{% endif %}>Lessons</a> 
+      <a href="{% url 'course_content' group_id %}" {% if title == 'course content' %}class="selected"{% endif %}>{% trans "Lessons" %}</a> 
      </li>
-    <li>  <a href="{% url 'course_raw_material' group_id %}" {% if title == 'raw material' or title == "raw_material_detail"  %}class="selected"{% endif %}>Resources</a> </li>
+    <li>  <a href="{% url 'course_raw_material' group_id %}" {% if title == 'raw material' or title == "raw_material_detail"  %}class="selected"{% endif %}>{% trans "Resources" %}</a> </li>
     <li>
-    <li>  <a  href="{% url 'course_gallery' group_id %}" {% if title == 'gallery' or title == "asset_gallery_detail" %} class="selected" {% endif %} >Gallery</a> </li>
+    <li>  <a  href="{% url 'course_gallery' group_id %}" {% if title == 'gallery' or title == "asset_gallery_detail" %} class="selected" {% endif %} >{% trans "Gallery" %}</a> </li>
     <li>
-      <a href="{% url 'course_notebook' group_id %}" {% if title == 'notebook' %}class="selected"{% endif %}>Notebook</a>
+      <a href="{% url 'course_notebook' group_id %}" {% if title == 'notebook' %}class="selected"{% endif %}>{% trans "Notebook" %}</a>
     </li>
   </ul>
 </div>
