--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/group_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/group_pages.html
@@ -13,7 +13,7 @@
                 {% endif %}
             </div>
             <div class="asset_text">
-                <div class="asset_title" title="{{each.name}}">{{each.name|truncatechars:25}}</div>
+                <div class="asset_title" title="{% firstof each.altnames each.name %}">{% firstof each.altnames|truncatechars:25 each.name|truncatechars:25 %}</div>
                 <!-- <div class="asset_desc">{{each.content|safe|truncatechars:25}}</div> -->
             </div>
         </div>
